syntax = "proto2";

package johnny.ameritrade;

message Config {
  // A globbing pattern, url, or other data telling the importer where to find
  // the files to import. if more than a single file matches, only the latest
  // file (by timestamp) will be imported. this is in essence, the configuration
  // across all possible sources, which are expected to be local files. in order
  // to contain dependencies, updating these local caches of remote transactions
  // logs should be done in separate programs using whichever apis are
  // necessary; this library merely imports them into a single normalized
  // database.
  optional string thinkorswim_account_statement_csv_file_pattern = 1;
  optional string thinkorswim_positions_statement_csv_file_pattern = 2;

  // A filename to a CSV file with information about treasuries. This will be
  // used to match US Treasury Interest lines from the cash account balance
  // which unfortunately don't come with a symbol.
  //
  // See "johnny/source/ameritrade/treasuries.py" to produce this file.
  optional string ameritrade_download_transactions_for_treasuries = 3;

  // Date of migration to Schwab. This is used to ignore Cash Balance rows after
  // this date. We will switch to the better Schwab downloads for those, and
  // that importer should automatically ignore the its rows before the
  // migration.
  //
  // Note that Futures subaccount inforamtion is still only available in
  // thinkorswim, so we will still have to process thinkorswim downloads for
  // now.
  //
  // Note that thinkorswim still retains some informations not available in the
  // Schwab download:
  // - time (only date is provided)
  // - a unique reference number
  //
  // Also, the thinkorswim download does not map 1-to-1 to the Schwab trades, it
  // breaks down multiple executions, whereas Schwab's download shows the
  // aggregated trades.
  optional string schwab_migration_date = 4;
}
